--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
       <p id="notice"><%= notice %></p>
 
     </div>
-
+　　<%= yield %>
     <footer>
       <div class="container">
         <div class="row">
