--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,10 @@
       <p id="notice"><%= notice %></p>
 
     </div>
+    <% flash.each do |key, value| %>
+     %= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
+
 　　<%= yield %>
     <footer>
       <div class="container">
