--- a/app/views/books/_newform.html.erb
+++ b/app/views/books/_newform.html.erb
@@ -1,15 +1,22 @@
-<%= form_for(book) do |f| %>
-	<div class="field row">
-		<%= f.label :title %>
-		<%= f.text_field :title, class: "col-xs-12 book_title" %>
-	</div>
+<% if book.errors.any? %>
+  <div class="alert alert-warning">
+   <div><%= book.errors.count %> error prohibited this book from being saved:</div>
+    <ul>
+      <% book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 
-	<div class="field row">
-		<%= f.label :body %>
-		<%= f.text_area :body, class: "col-xs-12 book_body" %>
-	</div>
+<%= form_with model: book, local:true do |f| %>
 
-	<div class="actions row">
-		<%= f.submit class: "btn btn-primary col-xs-12" %>
-	</div>
+ <h4>Title</h4>
+ <%= f.text_field :title %>
+
+ <h4>Opinion</h4>
+ <%= f.text_area :body %>
+
+ <%= f.submit 'Create Book' %>
+
 <% end %>
