--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,11 +1,26 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 
-		<h1>Editing Book</h1>
-
-		<%= render "books/newform", book: @book %>
-		<%= link_to "Show", book_path(@book), class: "book_#{@book.id}" %>
-		<%= link_to "Back", books_path, class: "back" %>
+		<h2>Editing Book</h2>
+<% if @book.errors.any? %>
+  <div class="alert alert-warning">
+   <div><%= @book.errors.count %> error prohibited this book from being saved:</div>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+<%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
+ <h4>Title</h4>
+ <%= f.text_field :title %>
+ <h4>Opinion</h4>
+ <%= f.text_area :body %>
+ <%= f.submit 'Update Book' %>
+<% end %>
+<%= link_to 'Show', @book %> |
+<%= link_to 'Back', books_path %>
 
 	</div>
 	<div class="col-md-3"></div>
