--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
 	<div class="col-xs-3">
 
@@ -10,7 +11,7 @@
 	</div>
 
 	<div class="col-xs-9">
-		<h2>Books index</h2>
+		<h2>Books</h2>
 		<!--books一覧 -->
 		<table class="table table-hover table-inverse">
 			<thead>
@@ -43,4 +44,5 @@
 
 
 	</div>
+</div>
 </div>
