--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,33 +1,43 @@
+<div class="container">
+  <div class="row">
+    <div class="col-xs-3">
+         <%= render'users/profile', user: @user %>
+         <%= render 'books/newform', book: @book_new %>
+    </div>
+    <div class="col-xs-9">
+      <table class="table">
+       <h1>Book detail</h1>
+        <thead>
+          <tr>
+           <th></th>
+          <th></th>
+          <th></th>
+          </tr>
+        </thead>
+        <tr>
+          <td>
+             <%= link_to(user_path(@book.user), class: 'list-content') do %>
+              <%= attachment_image_tag @book.user, :profile_image, :fill, 50, 50, format:'jpeg', class: "pull-left profile-img", fallback:"no_image.jpg" %>
+              <br>
+              <br>
+              <br>
+              <%= @book.user.name %>
+             <% end %>
+            </td>
 
-<div class="row">
-	<div class="col-xs-3">
+           <th><%= link_to @book.title %></th>
+           <th><%= @book.body %></th>
 
-		<h2>User info</h2>
-		<%= render 'users/profile' %>
 
-		<h2>New book</h2>
-		<%= render 'books/newform', book: @book %>
 
-	</div>
-
-	<div class="col-xs-9">
-		<h2>Book detail</h2>
-
-		<table class="table">
-				<tr>
-					<td>
-						<%= link_to user_path(@book.user) do %>
-							<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
-						<%= @book.user.name %>
-						<% end %>
-					</td>
-					<td><%= link_to @book.title, book_path(@book) %></td>
-					<td><%= @book.body %></td>
-					<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-					<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
-				</tr>
-			</table>
-
-	</div>
-</div>
-
+        <% if @book.user == current_user %>
+        <td>
+          <button type="button" class="btn btn-info"><%= link_to "Edit",edit_book_path, class: "edit_book_#{@book.id}" %></button>
+        </td>
+        <td>
+         <button type="button" class="btn btn-danger"><%= link_to 'Destroy', @book_path, method: :delete, data: { confirm: 'Are you sure?'} %></button>
+        </td>
+        <% end %>
+        </tr>
+    </div>
+  </div>
