--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,17 +1,21 @@
-<table class="table">
-	<tr><%= attachment_image_tag(user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %></tr>
-
-	<tr>
-		<th>name</th>
-		<th><%= user.name %></th>
-	</tr>
-
-	<tr>
-		<th>introduction</th>
-		<th><%= user.introduction %></th>
-	</tr>
-</table>
-
-<div class="row">
-	<%= link_to '', edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{user.id}" %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-3">
+    <h1></h1>
+    <%= attachment_image_tag user, :profile_image, :fill, 60, 60, format:'jpeg', class:"img-circle pull-left profile-img", fallback:"no_image.jpg" %>
+    <table class="table">
+      <tr>
+        <th>name</th>
+        <th><%= user.name %></th>
+      </tr>
+      <tr>
+        <th>Introduction</th>
+        <th><%= user.introduction %></th>
+      </tr>
+    </table>
+    <%= link_to(edit_user_path(user), class:"btn btn-default btn-block edit_user_#{current_user.id}") do %>
+    <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+    <% end %>
+    </div>
+  </div>
 </div>
