--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+  <div class="row">
+    <div class="col-xs-3">
 <h2>User info</h2>
 
 <%= form_for(@user) do |f| %>
@@ -13,11 +16,12 @@
 			</ul>
 		</div>
 	<% end %>
+
 	<!-- エラーメッセージ表示-->
 
 	<div class="field">
-		<%= f.label :title %>
-		<%= f.text_field :title, class: "name" %>
+		<%= f.label :name %>
+		<%= f.text_field :name, class: "name" %>
 	</div>
 
 	<div class="field">
@@ -35,3 +39,5 @@
 	</div>
 
 <% end %>
+ </div>
+</div>
