--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,30 +1,39 @@
-<h2>User info</h2>
-<%= render 'users/profile', user: current_user %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-3">
+     <h2>User info</h2>
+      <%= render 'users/profile', user: @user %>
+      <h2>New book</h2>
+      <%= render 'books/newform', book: @book %>
+    </div>
+    <div class="col-xs-9">
+      <table class="table">
+        <h1>Users</h1>
+        <tread>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+          </tr>
+        </thead>
 
-<h2>New book</h2>
-<%= render 'newform', book: @book %>
+        <tbody>
+        <% @users.each do |user| %>
 
+          <tr>
+            <td>
+              <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format:'jpeg', class: "pull-left profile-img", fallback:"no_image.jpg" %>
+            </td>
+            <td>
+              <%= user.name %>
+            </td>
+            <td>
+              <%= link_to "Show", user_path(user.id), class: "user_#{user.id}" %>
+            </td>
+          </tr>
 
-<h2>Users</h2>
-<!--users一覧 -->
-<table class="table">
-	<thead>
-		<tr>
-			<th>image</th>
-			<th>name</th>
-			<th colspan="3"></th>
-		</tr>
-	</thead>
-
-	<tbody>
-		<% @users.each do |user| %>
-		<tr>
-			<td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
-			<td><%= user.name %></td>
-			<td><%= link_to "Show", user_path(user), class: "user_#{user.id}" %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
-<!--users一覧 -->
-
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
