--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<div class="row">
+<div class="container">
+ <div class="row">
 	<div class="col-xs-3">
 		<h2>User info</h2>
 		<%= render 'users/profile', user: @user %>
@@ -21,20 +22,21 @@
 			</thead>
 
 			<tbody>
-				<% books.each do |book| %>
+				<% @books.each do |book| %>
 				<tr>
 					<td>
 						<%= link_to user_path(book.user) do %>
 							<%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
 						<% end %>
 					</td>
-					<td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
-					<td><%= book.body %></td>
+					<td><%= link_to "#{book.title}", book_path(book), class:"book_#{book.id}" %></td>
+          <td><%= book.body %></td>
 				</tr>
 				<% end %>
 			</tbody>
 		</table>
 		<!--books一覧 -->
 	</div>
+ </div>
 </div>
 
