--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,43 +1,81 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-3">
-         <%= render'users/profile', user: @user %>
-         <%= render 'books/newform', book: @book_new %>
+    <div class="row">
+        <div class="col-xs-3">
+            <%= render'users/profile', user: @user %>
+            <%= render 'books/newform', book: @book_new %>
+        </div>
+        <div class="col-xs-9">
+            <table class="table">
+                <h1>Book detail</h1>
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td>
+                        <%= link_to(user_path(@book.user), class: 'list-content') do %>
+                            <%= attachment_image_tag @book.user, :profile_image, :fill, 50, 50, format:'jpeg', class: "pull-left profile-img", fallback:"no_image.jpg" %>
+                            <br>
+                            <br>
+                            <br>
+                            <%= @book.user.name %>
+                        <% end %>
+                    </td>
+
+                   <th><%= link_to @book.title %></th>
+                   <th><%= @book.body %></th>
+                   <% if @book.favorited_by?(current_user) %>
+                      <th>
+                        <%= link_to book_favorites_path(@book), method: :delete do %>
+                          <i><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></i>
+                          <%= @book.favorites.count %> いいね</th>
+                        <% end %>
+                    <% else %>
+                      <th>
+                        <%= link_to book_favorites_path(@book), method: :post do %>
+                          <i><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span></i>
+                          <%= @book.favorites.count %> いいね
+                        <% end %>
+                      </th>
+                    <% end %>
+
+                    <% if @book.user == current_user %>
+                        <td>
+                            <button type="button" class="btn btn-info">
+                                <%= link_to "Edit",edit_book_path, class: "edit_book_#{@book.id}" %>
+                            </button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-danger">
+                                <%= link_to 'Destroy', book_path, method: :delete, data: { confirm: 'Are you sure?'} %>
+                            </button>
+                        </td>
+                    <% end %>
+                </tr>
+            </table>
+            　　　<% @comments.each do |comments| %>
+            　　　 <%= comments.comment %>
+                    <% if comments.user == current_user %>
+                     <%= link_to "Destroy", book_book_comment_path(comments), method: :delete, class: "btn btn-danger" %>
+                    <% end %>
+            　　　<% end %>
+            　　　　<%= form_with model: [@book, @comment] do |f| %>
+                       <%= f.text_area :comment %>
+                       <%= f.submit "送信" %>
+                  　<% end %>
+                   <li>
+                        <i class="fa fa-comment"></i>
+                        <a href="#comments"><%= @comments.count %></a>
+                   </li>
+
+                    <div class="comment-list bt style-2" id="comments">
+                        <div class="float-wrapper">
+                            <h2 class="comment-count"><%= @comments.count %>件コメント</h2>
+                        </div>
+                    </div>
+        </div>
     </div>
-    <div class="col-xs-9">
-      <table class="table">
-       <h1>Book detail</h1>
-        <thead>
-          <tr>
-           <th></th>
-          <th></th>
-          <th></th>
-          </tr>
-        </thead>
-        <tr>
-          <td>
-             <%= link_to(user_path(@book.user), class: 'list-content') do %>
-              <%= attachment_image_tag @book.user, :profile_image, :fill, 50, 50, format:'jpeg', class: "pull-left profile-img", fallback:"no_image.jpg" %>
-              <br>
-              <br>
-              <br>
-              <%= @book.user.name %>
-             <% end %>
-            </td>
-
-           <th><%= link_to @book.title %></th>
-           <th><%= @book.body %></th>
-
-
-
-        <% if @book.user == current_user %>
-        <td>
-          <button type="button" class="btn btn-info"><%= link_to "Edit",edit_book_path, class: "edit_book_#{@book.id}" %></button>
-        </td>
-        <td>
-         <button type="button" class="btn btn-danger"><%= link_to 'Destroy', @book_path, method: :delete, data: { confirm: 'Are you sure?'} %></button>
-        </td>
-        <% end %>
-        </tr>
-    </div>
-  </div>
+</div>
