--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-xs-3">
             <%= render'users/profile', user: @user %>
+            <%= render 'relationships/follow_button', user: @user %>
             <%= render 'books/newform', book: @book_new %>
         </div>
         <div class="col-xs-9">
