--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -12,6 +12,14 @@
         <th>Introduction</th>
         <th><%= user.introduction %></th>
       </tr>
+      <tr>
+       <th>follow</th>
+         <th><%= link_to "#{user.followings.count} フォロー", followings_user_path(user) %></th>
+      </tr>
+      <tr>
+       <th>follower</th>
+         <th><%= link_to "#{user.followers.count} フォロー", followers_user_path(user) %></th>
+      </tr>
     </table>
     <%= link_to(edit_user_path(user), class:"btn btn-default btn-block edit_user_#{current_user.id}") do %>
     <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
@@ -19,15 +27,3 @@
     </div>
   </div>
 </div>
-<tr>
-  <th>フォローしている</th>
-      <th><%= link_to "#{user.followings.count} フォロー", followings_user_path(user) %></th>
-</tr>
-<tr>
-  <th>フォローされている</th>
-  <th><%= link_to "#{user.followers.count} フォロー", followers_user_path(user) %></th>
-</tr>
-
-    <% if user == current_user %>
-     <%= link_to '',edit_user_path(current_user.id),class: "btn btn-block btn-default glyphicon glyphicon-wrench edit_user_#{current_user.id}" %>
-    <% end %>
