--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,21 +28,9 @@
 
                    <th><%= link_to @book.title %></th>
                    <th><%= @book.body %></th>
-                   <% if @book.favorited_by?(current_user) %>
-                      <th>
-                        <%= link_to book_favorites_path(@book), method: :delete do %>
-                          <i><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></i>
-                          <%= @book.favorites.count %> いいね</th>
-                        <% end %>
-                    <% else %>
-                      <th>
-                        <%= link_to book_favorites_path(@book), method: :post do %>
-                          <i><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span></i>
-                          <%= @book.favorites.count %> いいね
-                        <% end %>
-                      </th>
-                    <% end %>
-
+                    <td id="book-<%= @book.id%>">
+                   　<%= render 'books/item', book: @book %>
+                    </td>
                     <% if @book.user == current_user %>
                         <td>
                             <button type="button" class="btn btn-info">
@@ -57,26 +45,9 @@
                     <% end %>
                 </tr>
             </table>
-            　　　<% @comments.each do |comments| %>
-            　　　 <%= comments.comment %>
-                    <% if comments.user == current_user %>
-                     <%= link_to "Destroy", book_book_comment_path(comments), method: :delete, class: "btn btn-danger" %>
-                    <% end %>
-            　　　<% end %>
-            　　　　<%= form_with model: [@book, @comment] do |f| %>
-                       <%= f.text_area :comment %>
-                       <%= f.submit "送信" %>
-                  　<% end %>
-                   <li>
-                        <i class="fa fa-comment"></i>
-                        <a href="#comments"><%= @comments.count %></a>
-                   </li>
-
-                    <div class="comment-list bt style-2" id="comments">
-                        <div class="float-wrapper">
-                            <h2 class="comment-count"><%= @comments.count %>件コメント</h2>
-                        </div>
-                    </div>
+                <td id="comments_list">
+            　　　<%= render 'book_comments/comments', book_comments: @book_comments %>
+            　　</td>
         </div>
     </div>
 </div>
