--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -1,20 +1,25 @@
-<% @comments.each do |comments| %>
-　<%= comments.comment %>
-    <% if comments.user == current_user %>
-      <%= link_to "Destroy", book_book_comment_path(comments), method: :delete, remote:true, class: "btn btn-danger" %>
+<% book_comments.each do |comment| %>
+  <tr>
+　<td>
+　  <%= comment.comment %>
+　</td>
+　<td>
+　  <% if comment.user == current_user %>
+      <%= link_to "Destroy", book_book_comment_path(book, comment), method: :delete, remote:true, class: "btn btn-danger" %>
     <% end %>
+
+　</td>
+
+  </tr>
 <% end %>
- <%= form_with model: [@book, @comment] do |f| %>
-    <%= f.text_area :comment %>
-    <%= f.submit "送信" %>
-  <% end %>
+
   <li>
     <i class="fa fa-comment"></i>
-      <a href="#comments"><%= @comments.count %></a>
+      <a href="#comments"><%= book_comments.count %></a>
     </li>
 
   <div class="comment-list bt style-2" id="comments">
     <div class="float-wrapper">
-      <h2 class="comment-count"><%= @comments.count %>件コメント</h2>
+      <h2 class="comment-count"><%= book_comments.count %>件コメント</h2>
     </div>
   </div>
