--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,3 +1,1 @@
-$("#comment_list").html("<%= j(render 'book_comments/comments', book_comments: @book_comments) %>");
-$("#book_comments_count").text(<%= @book_comments.count %>);
-$("#book_comment_content").val("");
+$(".comment_list_<%= @book.id %>").html("<%= j(render 'book_comments/comment', book_comments: @book_comments, book: @book, comment: @comment) %>");
