--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -39,7 +39,7 @@
                         </td>
                         <td>
                             <button type="button" class="btn btn-danger">
-                                <%= link_to 'Destroy', book_path, method: :delete, data: { confirm: 'Are you sure?'} %>
+                                <%= link_to 'Destroy', book_path, method: :delete, remote: true, data: { confirm: 'Are you sure?'} %>
                             </button>
                         </td>
                 　　<% end %>
